2009-12-03  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpserver.py:
	Add a warning message to the http-server component when its property
	path has been set in conjunction with a file provider plug.

2009-12-02  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/httpcached.xml:
	Fixed fileprovider-httpcached bundle definition.

2009-12-01  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/cachemanager.py:
	* flumotion/component/misc/httpserver/httpcached/file_reader.py:
	* flumotion/component/misc/httpserver/httpcached/httpcached.xml:
	* flumotion/component/misc/httpserver/httpcached/request_manager.py:
	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
	* flumotion/test/test_component_httpserver_httpcached_stats.py:
	Changed some property names and comments.
	Fixed a bug where the relative path only was used to generate the
	cache identifier, this could lead to cache collisions between
	http servers even with different mount-points.

2009-11-27  Guillem Solà  <garanda@flumotion.com>

	reviewed by: xqueralt

	* flumotion/component/producers/audiotest/wizard_gtk.py:
	fix lowercase names in r8413.

2009-11-27  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
	Fixed a bug when a connection is resumed while buffering.

2009-11-27 Guillem Solà  <garanda@flumotion.com>

	reviewed by: xqueralt

	* flumotion/component/producers/audiotest/admin_gtk.py:
	* flumotion/component/producers/audiotest/audiotest.py:
	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/audiotest/wizard.glade:
	* flumotion/component/producers/audiotest/wizard_gtk.py:
	* flumotion/component/producers/videotest/admin_gtk.py:
	* flumotion/component/producers/videotest/wizard_gtk.py:
	* po/ca.po:
	* po/es.po:
	add wave property to audiotest.