@@ -1,6 +1,11 @@
 2009-12-03  Sébastien Merle  <sebastien@flumotion.com>
 
 	* flumotion/component/misc/httpserver/httpserver.py:
+	Fixed i18n of the 'path' property warning message.
+
+2009-12-03  Sébastien Merle  <sebastien@flumotion.com>
+
+	* flumotion/component/misc/httpserver/httpserver.py:
 	Add a warning message to the http-server component when its property
 	path has been set in conjunction with a file provider plug.
 
